# CMakeConfigure

./: .gitignore  CMakeConfigure.userprefs  CMakeConfigureProject.sln  CMakeConfigureProject.userprefs
CMakeConfigure/: CMakeConfigure.csproj
CMakeConfigure/Properties/: AssemblyInfo.cs
CMakeConfigure/Src/: CMakeHelper.cs  PathsHelp.cs  Program.cs  ProjectConfig.cs
Templates/: CMakeLists_Executable_Template.txt  CMakeLists_HeaderLib_Template.txt  CMakeLists_SharedLib_Template.txt  CMakeLists_StaticLib_Template.txt
Test/: readme.txt
Test/project/: CMakeLists.txt
Test/project/src/: main.cpp
Test/scripts/: build_vs_2017.bat  create_cmakelists .bat
scripts/: build.bat  build.command  create_cmake.bat
